# TrackToy

./: CMakeLists.txt  FindKINKAL.cmake  README.md
Data/: MDC2020n_10pc_EleBeamCat_SimEff.txt  MDC2020n_10pc_MuBeamCat_SimEff.txt  MaterialsList.data  Mu2eIIa2EleBeamCat_SimEff.txt  Mu2eIIa2MuBeamCat_SimEff.txt  Mu2eIIa2_MuBeamCat.root  Mu2eIIa2_MuBeamCat_SimEff.txt  Mu2e_MuBeam.root  Schedule.txt  Schedule_MCAmbig.txt  Schedule_driftextend.txt  Schedule_driftfit.txt  Schedule_seedfit.txt  Schedule_testext.txt  Schedule_testfit.txt  Schedule_testseed.txt
Detector/: CMakeLists.txt  Calorimeter.cc  Calorimeter.hh  CylinderElem.cc  CylinderElem.hh  CylindricalShell.hh  EStar.cc  EStar.hh  EdmlParser.cc  EdmlParser.hh  EdmlXMLEngine.cc  EdmlXMLEngine.hh  HollowCylinder.cc  HollowCylinder.hh  IPA.cc  IPA.hh  Target.cc  Target.hh  Tracker.cc  Tracker.hh
General/: CMakeLists.txt  ELossDistributions.cc  ELossDistributions.hh  FileFinder.hh  Moyal.cc  Moyal.hh  MuonRange.cc  MuonRange.hh  PhysicalConstants.h  TrajUtilities.hh
Mains/: BField_test.cc  CMakeLists.txt  CylBField_test.cc  ELossDists_test.cc  MoyalDist_unit.cc  MuStops_test.cc  Particle_test.cc  README.md  Separation_test.cc  Tracks_test.cc
Spectra/: CMakeLists.txt  CeEndpoint.hh  CeMinusSpectrum.cc  CeMinusSpectrum.hh  CeSpectrum.cc  CeSpectrum.hh  DIOSpectrum.cc  DIOSpectrum.hh  Spectrum.hh
Test/: CMakeLists.txt  LinkDef.h  TrkInfo.hh
Tests/: BField_test.cc  BeamDumper.fcl  CMakeLists.txt  CeMinusSpectrum_test.cc  CeSpectrum_test.cc  CeTracks_test.cc  CompareSims.C  CompareSpectra.C  DIOSpectrum_test.cc  FieldDumper.fcl  KKFit.C  LinkDef.h  MomResComp.C  MuStops.C  MuStops_test.cc  MuonRange_test.cc  Particle_test.cc  README.md  RunMu2e.sh  RunMu2e2.sh  RunMu2e2_ipamass.sh  RunMu2e2_targetmass.sh  RunTest.sh  RunTests.sh  Run_Targets.sh  Spectrum_test.cc  Tracks_test.cc  TrkInfo.hh  Whitepaper.C
